kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/complex_expression.k
type U {
    .u: U,
}

type Foo {
    .bar(a: U): match U.u { .u => Foo },
}
